# corelib

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  compile_flags.txt  mathjax_config.js
include/corelib/: combinatorics.hpp  math.hpp
include/corelib/data_structure/list/: doubly_linked_list.h
include/corelib/math/: combinatorics.hpp
src/data_structure/list/: doubly_linked_list.c
src/list/: doubly_linked_list.c
test/data_structure/list/: doubly_linked_list_test.c
tests/corelib/: test_main.cpp  test_math.cpp  test_math.hpp
